parser.out
Grammar:

Rule 0     S' -> Programa
Rule 1     Programa -> Programa listlineas
Rule 2     Programa -> listlineas
Rule 3     optAssign -> = Expression
Rule 4     optAssign -> <empty>
Rule 5     Expression -> WHILE ( Expression ) { bloque }
Rule 6     Expression -> IF ( Expression ) { bloque } Continuacion
Rule 7     Expression -> IF ( Expression ) { bloque }
Rule 8     Expression -> Expression | | Expression
Rule 9     Expression -> Expression & & Expression
Rule 10    Expression -> ! Expression
Rule 11    Expression -> Expression ! = Expression
Rule 12    Expression -> Expression = = Expression
Rule 13    Expression -> Expression > = Expression
Rule 14    Expression -> Expression < = Expression
Rule 15    Expression -> Expression < Expression
Rule 16    Expression -> ( Expression )
Rule 17    Expression -> OBJECTID
Rule 18    Expression -> CHAR_CONST
Rule 19    Expression -> FLOAT_CONST
Rule 20    Expression -> INT_CONST
Rule 21    Expression -> Expression / Expression
Rule 22    Expression -> Expression * Expression
Rule 23    Expression -> Expression - Expression
Rule 24    Expression -> Expression + Expression
Rule 25    Expression -> RETURN
Rule 26    Expression -> RETURN Expression
Rule 27    Expression -> PRINT ( STRING argumentos ) ;
Rule 28    Expression -> PRINT ( STRING ) ;
Rule 29    argumentos -> , Expression argumentos
Rule 30    argumentos -> , Expression
Rule 31    tipo -> VOID
Rule 32    tipo -> CHAR
Rule 33    tipo -> FLOAT
Rule 34    tipo -> INT
Rule 35    Atributo -> tipo OBJECTID optAssign ;
Rule 36    Metodo -> tipo OBJECTID ( listaFormales ) { bloque } ;
Rule 37    Metodo -> tipo OBJECTID ( ) { bloque } ;
Rule 38    listaFormales -> Formal
Rule 39    Formal -> tipo OBJECTID
Rule 40    bloque -> Expression ; bloque
Rule 41    bloque -> Expression ;
Rule 42    Continuacion -> ELSE IF ( Expression ) { bloque }
Rule 43    Continuacion -> ELSE IF ( Expression ) { bloque } Continuacion
Rule 44    Continuacion -> ELSE { bloque }
Rule 45    Linea -> Expression
Rule 46    Linea -> Metodo
Rule 47    Linea -> Atributo
Rule 48    listlineas -> Linea listlineas
Rule 49    listlineas -> Linea

Unused terminals:

    AUTO
    SWITCH
    STATIC
    BREAK
    CASE
    CONST
    TYPEDEF
    GOTO
    ENUM
    VOLATILE
    FOR
    EXTERN
    UNSIGNED
    CONTINUE
    SHORT
    UNION
    DO
    SIZEOF
    DEFAULT
    STRUCT
    SIGNED
    DOUBLE
    LONG
    REGISTER

Terminals, with rules where they appear:

!                    : 10 11
&                    : 9 9
(                    : 5 6 7 16 27 28 36 37 42 43
)                    : 5 6 7 16 27 28 36 37 42 43
*                    : 22
+                    : 24
,                    : 29 30
-                    : 23
/                    : 21
;                    : 27 28 35 36 37 40 41
<                    : 14 15
=                    : 3 11 12 12 13 14
>                    : 13
AUTO                 : 
BREAK                : 
CASE                 : 
CHAR                 : 32
CHAR_CONST           : 18
CONST                : 
CONTINUE             : 
DEFAULT              : 
DO                   : 
DOUBLE               : 
ELSE                 : 42 43 44
ENUM                 : 
EXTERN               : 
FLOAT                : 33
FLOAT_CONST          : 19
FOR                  : 
GOTO                 : 
IF                   : 6 7 42 43
INT                  : 34
INT_CONST            : 20
LONG                 : 
OBJECTID             : 17 35 36 37 39
PRINT                : 27 28
REGISTER             : 
RETURN               : 25 26
SHORT                : 
SIGNED               : 
SIZEOF               : 
STATIC               : 
STRING               : 27 28
STRUCT               : 
SWITCH               : 
TYPEDEF              : 
UNION                : 
UNSIGNED             : 
VOID                 : 31
VOLATILE             : 
WHILE                : 5
error                : 
{                    : 5 6 7 36 37 42 43 44
|                    : 8 8
}                    : 5 6 7 36 37 42 43 44

Nonterminals, with rules where they appear:

Atributo             : 47
Continuacion         : 6 43
Expression           : 3 5 6 7 8 8 9 9 10 11 11 12 12 13 13 14 14 15 15 16 21 21 22 22 23 23 24 24 26 29 30 40 41 42 43 45
Formal               : 38
Linea                : 48 49
Metodo               : 46
Programa             : 1 0
argumentos           : 27 29
bloque               : 5 6 7 36 37 40 42 43 44
listaFormales        : 36
listlineas           : 1 2 48
optAssign            : 35
tipo                 : 35 36 37 39


state 0

    (0) S' -> . Programa
    (1) Programa -> . Programa listlineas
    (2) Programa -> . listlineas
    (48) listlineas -> . Linea listlineas
    (49) listlineas -> . Linea
    (45) Linea -> . Expression
    (46) Linea -> . Metodo
    (47) Linea -> . Atributo
    (5) Expression -> . WHILE ( Expression ) { bloque }
    (6) Expression -> . IF ( Expression ) { bloque } Continuacion
    (7) Expression -> . IF ( Expression ) { bloque }
    (8) Expression -> . Expression | | Expression
    (9) Expression -> . Expression & & Expression
    (10) Expression -> . ! Expression
    (11) Expression -> . Expression ! = Expression
    (12) Expression -> . Expression = = Expression
    (13) Expression -> . Expression > = Expression
    (14) Expression -> . Expression < = Expression
    (15) Expression -> . Expression < Expression
    (16) Expression -> . ( Expression )
    (17) Expression -> . OBJECTID
    (18) Expression -> . CHAR_CONST
    (19) Expression -> . FLOAT_CONST
    (20) Expression -> . INT_CONST
    (21) Expression -> . Expression / Expression
    (22) Expression -> . Expression * Expression
    (23) Expression -> . Expression - Expression
    (24) Expression -> . Expression + Expression
    (25) Expression -> . RETURN
    (26) Expression -> . RETURN Expression
    (27) Expression -> . PRINT ( STRING argumentos ) ;
    (28) Expression -> . PRINT ( STRING ) ;
    (36) Metodo -> . tipo OBJECTID ( listaFormales ) { bloque } ;
    (37) Metodo -> . tipo OBJECTID ( ) { bloque } ;
    (35) Atributo -> . tipo OBJECTID optAssign ;
    (31) tipo -> . VOID
    (32) tipo -> . CHAR
    (33) tipo -> . FLOAT
    (34) tipo -> . INT
    WHILE           shift and go to state 7
    IF              shift and go to state 9
    !               shift and go to state 10
    (               shift and go to state 8
    OBJECTID        shift and go to state 11
    CHAR_CONST      shift and go to state 12
    FLOAT_CONST     shift and go to state 13
    INT_CONST       shift and go to state 14
    RETURN          shift and go to state 15
    PRINT           shift and go to state 16
    VOID            shift and go to state 18
    CHAR            shift and go to state 19
    FLOAT           shift and go to state 20
    INT             shift and go to state 21

    Programa                       shift and go to state 1
    listlineas                     shift and go to state 2
    Linea                          shift and go to state 3
    Expression                     shift and go to state 4
    Metodo                         shift and go to state 5
    Atributo                       shift and go to state 6
    tipo                           shift and go to state 17

state 1

    (0) S' -> Programa .
    (1) Programa -> Programa . listlineas
    (48) listlineas -> . Linea listlineas
    (49) listlineas -> . Linea
    (45) Linea -> . Expression
    (46) Linea -> . Metodo
    (47) Linea -> . Atributo
    (5) Expression -> . WHILE ( Expression ) { bloque }
    (6) Expression -> . IF ( Expression ) { bloque } Continuacion
    (7) Expression -> . IF ( Expression ) { bloque }
    (8) Expression -> . Expression | | Expression
    (9) Expression -> . Expression & & Expression
    (10) Expression -> . ! Expression
    (11) Expression -> . Expression ! = Expression
    (12) Expression -> . Expression = = Expression
    (13) Expression -> . Expression > = Expression
    (14) Expression -> . Expression < = Expression
    (15) Expression -> . Expression < Expression
    (16) Expression -> . ( Expression )
    (17) Expression -> . OBJECTID
    (18) Expression -> . CHAR_CONST
    (19) Expression -> . FLOAT_CONST
    (20) Expression -> . INT_CONST
    (21) Expression -> . Expression / Expression
    (22) Expression -> . Expression * Expression
    (23) Expression -> . Expression - Expression
    (24) Expression -> . Expression + Expression
    (25) Expression -> . RETURN
    (26) Expression -> . RETURN Expression
    (27) Expression -> . PRINT ( STRING argumentos ) ;
    (28) Expression -> . PRINT ( STRING ) ;
    (36) Metodo -> . tipo OBJECTID ( listaFormales ) { bloque } ;
    (37) Metodo -> . tipo OBJECTID ( ) { bloque } ;
    (35) Atributo -> . tipo OBJECTID optAssign ;
    (31) tipo -> . VOID
    (32) tipo -> . CHAR
    (33) tipo -> . FLOAT
    (34) tipo -> . INT
    WHILE           shift and go to state 7
    IF              shift and go to state 9
    !               shift and go to state 10
    (               shift and go to state 8
    OBJECTID        shift and go to state 11
    CHAR_CONST      shift and go to state 12
    FLOAT_CONST     shift and go to state 13
    INT_CONST       shift and go to state 14
    RETURN          shift and go to state 15
    PRINT           shift and go to state 16
    VOID            shift and go to state 18
    CHAR            shift and go to state 19
    FLOAT           shift and go to state 20
    INT             shift and go to state 21

    listlineas                     shift and go to state 22
    Linea                          shift and go to state 3
    Expression                     shift and go to state 4
    Metodo                         shift and go to state 5
    Atributo                       shift and go to state 6
    tipo                           shift and go to state 17

state 2

    (2) Programa -> listlineas .
    WHILE           reduce using rule 2 (Programa -> listlineas .)
    IF              reduce using rule 2 (Programa -> listlineas .)
    !               reduce using rule 2 (Programa -> listlineas .)
    (               reduce using rule 2 (Programa -> listlineas .)
    OBJECTID        reduce using rule 2 (Programa -> listlineas .)
    CHAR_CONST      reduce using rule 2 (Programa -> listlineas .)
    FLOAT_CONST     reduce using rule 2 (Programa -> listlineas .)
    INT_CONST       reduce using rule 2 (Programa -> listlineas .)
    RETURN          reduce using rule 2 (Programa -> listlineas .)
    PRINT           reduce using rule 2 (Programa -> listlineas .)
    VOID            reduce using rule 2 (Programa -> listlineas .)
    CHAR            reduce using rule 2 (Programa -> listlineas .)
    FLOAT           reduce using rule 2 (Programa -> listlineas .)
    INT             reduce using rule 2 (Programa -> listlineas .)
    $end            reduce using rule 2 (Programa -> listlineas .)


state 3

    (48) listlineas -> Linea . listlineas
    (49) listlineas -> Linea .
    (48) listlineas -> . Linea listlineas
    (49) listlineas -> . Linea
    (45) Linea -> . Expression
    (46) Linea -> . Metodo
    (47) Linea -> . Atributo
    (5) Expression -> . WHILE ( Expression ) { bloque }
    (6) Expression -> . IF ( Expression ) { bloque } Continuacion
    (7) Expression -> . IF ( Expression ) { bloque }
    (8) Expression -> . Expression | | Expression
    (9) Expression -> . Expression & & Expression
    (10) Expression -> . ! Expression
    (11) Expression -> . Expression ! = Expression
    (12) Expression -> . Expression = = Expression
    (13) Expression -> . Expression > = Expression
    (14) Expression -> . Expression < = Expression
    (15) Expression -> . Expression < Expression
    (16) Expression -> . ( Expression )
    (17) Expression -> . OBJECTID
    (18) Expression -> . CHAR_CONST
    (19) Expression -> . FLOAT_CONST
    (20) Expression -> . INT_CONST
    (21) Expression -> . Expression / Expression
    (22) Expression -> . Expression * Expression
    (23) Expression -> . Expression - Expression
    (24) Expression -> . Expression + Expression
    (25) Expression -> . RETURN
    (26) Expression -> . RETURN Expression
    (27) Expression -> . PRINT ( STRING argumentos ) ;
    (28) Expression -> . PRINT ( STRING ) ;
    (36) Metodo -> . tipo OBJECTID ( listaFormales ) { bloque } ;
    (37) Metodo -> . tipo OBJECTID ( ) { bloque } ;
    (35) Atributo -> . tipo OBJECTID optAssign ;
    (31) tipo -> . VOID
    (32) tipo -> . CHAR
    (33) tipo -> . FLOAT
    (34) tipo -> . INT
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for ! resolved as shift
  ! shift/reduce conflict for ( resolved as shift
  ! shift/reduce conflict for OBJECTID resolved as shift
  ! shift/reduce conflict for CHAR_CONST resolved as shift
  ! shift/reduce conflict for FLOAT_CONST resolved as shift
  ! shift/reduce conflict for INT_CONST resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for INT resolved as shift
    $end            reduce using rule 49 (listlineas -> Linea .)
    WHILE           shift and go to state 7
    IF              shift and go to state 9
    !               shift and go to state 10
    (               shift and go to state 8
    OBJECTID        shift and go to state 11
    CHAR_CONST      shift and go to state 12
    FLOAT_CONST     shift and go to state 13
    INT_CONST       shift and go to state 14
    RETURN          shift and go to state 15
    PRINT           shift and go to state 16
    VOID            shift and go to state 18
    CHAR            shift and go to state 19
    FLOAT           shift and go to state 20
    INT             shift and go to state 21

    Linea                          shift and go to state 3
    listlineas                     shift and go to state 23
    Expression                     shift and go to state 4
    Metodo                         shift and go to state 5
    Atributo                       shift and go to state 6
    tipo                           shift and go to state 17

state 4

    (45) Linea -> Expression .
    (8) Expression -> Expression . | | Expression
    (9) Expression -> Expression . & & Expression
    (11) Expression -> Expression . ! = Expression
    (12) Expression -> Expression . = = Expression
    (13) Expression -> Expression . > = Expression
    (14) Expression -> Expression . < = Expression
    (15) Expression -> Expression . < Expression
    (21) Expression -> Expression . / Expression
    (22) Expression -> Expression . * Expression
    (23) Expression -> Expression . - Expression
    (24) Expression -> Expression . + Expression
  ! shift/reduce conflict for ! resolved as shift
    WHILE           reduce using rule 45 (Linea -> Expression .)
    IF              reduce using rule 45 (Linea -> Expression .)
    (               reduce using rule 45 (Linea -> Expression .)
    OBJECTID        reduce using rule 45 (Linea -> Expression .)
    CHAR_CONST      reduce using rule 45 (Linea -> Expression .)
    FLOAT_CONST     reduce using rule 45 (Linea -> Expression .)
    INT_CONST       reduce using rule 45 (Linea -> Expression .)
    RETURN          reduce using rule 45 (Linea -> Expression .)
    PRINT           reduce using rule 45 (Linea -> Expression .)
    VOID            reduce using rule 45 (Linea -> Expression .)
    CHAR            reduce using rule 45 (Linea -> Expression .)
    FLOAT           reduce using rule 45 (Linea -> Expression .)
    INT             reduce using rule 45 (Linea -> Expression .)
    $end            reduce using rule 45 (Linea -> Expression .)
    |               shift and go to state 24
    &               shift and go to state 25
    !               shift and go to state 26
    =               shift and go to state 27
    >               shift and go to state 28
    <               shift and go to state 29
    /               shift and go to state 30
    *               shift and go to state 31
    -               shift and go to state 32
    +               shift and go to state 33


state 5

    (46) Linea -> Metodo .
    WHILE           reduce using rule 46 (Linea -> Metodo .)
    IF              reduce using rule 46 (Linea -> Metodo .)
    !               reduce using rule 46 (Linea -> Metodo .)
    (               reduce using rule 46 (Linea -> Metodo .)
    OBJECTID        reduce using rule 46 (Linea -> Metodo .)
    CHAR_CONST      reduce using rule 46 (Linea -> Metodo .)
    FLOAT_CONST     reduce using rule 46 (Linea -> Metodo .)
    INT_CONST       reduce using rule 46 (Linea -> Metodo .)
    RETURN          reduce using rule 46 (Linea -> Metodo .)
    PRINT           reduce using rule 46 (Linea -> Metodo .)
    VOID            reduce using rule 46 (Linea -> Metodo .)
    CHAR            reduce using rule 46 (Linea -> Metodo .)
    FLOAT           reduce using rule 46 (Linea -> Metodo .)
    INT             reduce using rule 46 (Linea -> Metodo .)
    $end            reduce using rule 46 (Linea -> Metodo .)


state 6

    (47) Linea -> Atributo .
    WHILE           reduce using rule 47 (Linea -> Atributo .)
    IF              reduce using rule 47 (Linea -> Atributo .)
    !               reduce using rule 47 (Linea -> Atributo .)
    (               reduce using rule 47 (Linea -> Atributo .)
    OBJECTID        reduce using rule 47 (Linea -> Atributo .)
    CHAR_CONST      reduce using rule 47 (Linea -> Atributo .)
    FLOAT_CONST     reduce using rule 47 (Linea -> Atributo .)
    INT_CONST       reduce using rule 47 (Linea -> Atributo .)
    RETURN          reduce using rule 47 (Linea -> Atributo .)
    PRINT           reduce using rule 47 (Linea -> Atributo .)
    VOID            reduce using rule 47 (Linea -> Atributo .)
    CHAR            reduce using rule 47 (Linea -> Atributo .)
    FLOAT           reduce using rule 47 (Linea -> Atributo .)
    INT             reduce using rule 47 (Linea -> Atributo .)
    $end            reduce using rule 47 (Linea -> Atributo .)


state 7

    (5) Expression -> WHILE . ( Expression ) { bloque }
    (               shift and go to state 34


state 8

    (16) Expression -> ( . Expression )
    (5) Expression -> . WHILE ( Expression ) { bloque }
    (6) Expression -> . IF ( Expression ) { bloque } Continuacion
    (7) Expression -> . IF ( Expression ) { bloque }
    (8) Expression -> . Expression | | Expression
    (9) Expression -> . Expression & & Expression
    (10) Expression -> . ! Expression
    (11) Expression -> . Expression ! = Expression
    (12) Expression -> . Expression = = Expression
    (13) Expression -> . Expression > = Expression
    (14) Expression -> . Expression < = Expression
    (15) Expression -> . Expression < Expression
    (16) Expression -> . ( Expression )
    (17) Expression -> . OBJECTID
    (18) Expression -> . CHAR_CONST
    (19) Expression -> . FLOAT_CONST
    (20) Expression -> . INT_CONST
    (21) Expression -> . Expression / Expression
    (22) Expression -> . Expression * Expression
    (23) Expression -> . Expression - Expression
    (24) Expression -> . Expression + Expression
    (25) Expression -> . RETURN
    (26) Expression -> . RETURN Expression
    (27) Expression -> . PRINT ( STRING argumentos ) ;
    (28) Expression -> . PRINT ( STRING ) ;
    WHILE           shift and go to state 7
    IF              shift and go to state 9
    !               shift and go to state 10
    (               shift and go to state 8
    OBJECTID        shift and go to state 11
    CHAR_CONST      shift and go to state 12
    FLOAT_CONST     shift and go to state 13
    INT_CONST       shift and go to state 14
    RETURN          shift and go to state 15
    PRINT           shift and go to state 16

    Expression                     shift and go to state 35

state 9

    (6) Expression -> IF . ( Expression ) { bloque } Continuacion
    (7) Expression -> IF . ( Expression ) { bloque }
    (               shift and go to state 36


state 10

    (10) Expression -> ! . Expression
    (5) Expression -> . WHILE ( Expression ) { bloque }
    (6) Expression -> . IF ( Expression ) { bloque } Continuacion
    (7) Expression -> . IF ( Expression ) { bloque }
    (8) Expression -> . Expression | | Expression
    (9) Expression -> . Expression & & Expression
    (10) Expression -> . ! Expression
    (11) Expression -> . Expression ! = Expression
    (12) Expression -> . Expression = = Expression
    (13) Expression -> . Expression > = Expression
    (14) Expression -> . Expression < = Expression
    (15) Expression -> . Expression < Expression
    (16) Expression -> . ( Expression )
    (17) Expression -> . OBJECTID
    (18) Expression -> . CHAR_CONST
    (19) Expression -> . FLOAT_CONST
    (20) Expression -> . INT_CONST
    (21) Expression -> . Expression / Expression
    (22) Expression -> . Expression * Expression
    (23) Expression -> . Expression - Expression
    (24) Expression -> . Expression + Expression
    (25) Expression -> . RETURN
    (26) Expression -> . RETURN Expression
    (27) Expression -> . PRINT ( STRING argumentos ) ;
    (28) Expression -> . PRINT ( STRING ) ;
    WHILE           shift and go to state 7
    IF              shift and go to state 9
    !               shift and go to state 10
    (               shift and go to state 8
    OBJECTID        shift and go to state 11
    CHAR_CONST      shift and go to state 12
    FLOAT_CONST     shift and go to state 13
    INT_CONST       shift and go to state 14
    RETURN          shift and go to state 15
    PRINT           shift and go to state 16

    Expression                     shift and go to state 37

state 11

    (17) Expression -> OBJECTID .
    |               reduce using rule 17 (Expression -> OBJECTID .)
    &               reduce using rule 17 (Expression -> OBJECTID .)
    !               reduce using rule 17 (Expression -> OBJECTID .)
    =               reduce using rule 17 (Expression -> OBJECTID .)
    >               reduce using rule 17 (Expression -> OBJECTID .)
    <               reduce using rule 17 (Expression -> OBJECTID .)
    /               reduce using rule 17 (Expression -> OBJECTID .)
    *               reduce using rule 17 (Expression -> OBJECTID .)
    -               reduce using rule 17 (Expression -> OBJECTID .)
    +               reduce using rule 17 (Expression -> OBJECTID .)
    WHILE           reduce using rule 17 (Expression -> OBJECTID .)
    IF              reduce using rule 17 (Expression -> OBJECTID .)
    (               reduce using rule 17 (Expression -> OBJECTID .)
    OBJECTID        reduce using rule 17 (Expression -> OBJECTID .)
    CHAR_CONST      reduce using rule 17 (Expression -> OBJECTID .)
    FLOAT_CONST     reduce using rule 17 (Expression -> OBJECTID .)
    INT_CONST       reduce using rule 17 (Expression -> OBJECTID .)
    RETURN          reduce using rule 17 (Expression -> OBJECTID .)
    PRINT           reduce using rule 17 (Expression -> OBJECTID .)
    VOID            reduce using rule 17 (Expression -> OBJECTID .)
    CHAR            reduce using rule 17 (Expression -> OBJECTID .)
    FLOAT           reduce using rule 17 (Expression -> OBJECTID .)
    INT             reduce using rule 17 (Expression -> OBJECTID .)
    $end            reduce using rule 17 (Expression -> OBJECTID .)
    )               reduce using rule 17 (Expression -> OBJECTID .)
    ;               reduce using rule 17 (Expression -> OBJECTID .)
    ,               reduce using rule 17 (Expression -> OBJECTID .)


state 12

    (18) Expression -> CHAR_CONST .
    |               reduce using rule 18 (Expression -> CHAR_CONST .)
    &               reduce using rule 18 (Expression -> CHAR_CONST .)
    !               reduce using rule 18 (Expression -> CHAR_CONST .)
    =               reduce using rule 18 (Expression -> CHAR_CONST .)
    >               reduce using rule 18 (Expression -> CHAR_CONST .)
    <               reduce using rule 18 (Expression -> CHAR_CONST .)
    /               reduce using rule 18 (Expression -> CHAR_CONST .)
    *               reduce using rule 18 (Expression -> CHAR_CONST .)
    -               reduce using rule 18 (Expression -> CHAR_CONST .)
    +               reduce using rule 18 (Expression -> CHAR_CONST .)
    WHILE           reduce using rule 18 (Expression -> CHAR_CONST .)
    IF              reduce using rule 18 (Expression -> CHAR_CONST .)
    (               reduce using rule 18 (Expression -> CHAR_CONST .)
    OBJECTID        reduce using rule 18 (Expression -> CHAR_CONST .)
    CHAR_CONST      reduce using rule 18 (Expression -> CHAR_CONST .)
    FLOAT_CONST     reduce using rule 18 (Expression -> CHAR_CONST .)
    INT_CONST       reduce using rule 18 (Expression -> CHAR_CONST .)
    RETURN          reduce using rule 18 (Expression -> CHAR_CONST .)
    PRINT           reduce using rule 18 (Expression -> CHAR_CONST .)
    VOID            reduce using rule 18 (Expression -> CHAR_CONST .)
    CHAR            reduce using rule 18 (Expression -> CHAR_CONST .)
    FLOAT           reduce using rule 18 (Expression -> CHAR_CONST .)
    INT             reduce using rule 18 (Expression -> CHAR_CONST .)
    $end            reduce using rule 18 (Expression -> CHAR_CONST .)
    )               reduce using rule 18 (Expression -> CHAR_CONST .)
    ;               reduce using rule 18 (Expression -> CHAR_CONST .)
    ,               reduce using rule 18 (Expression -> CHAR_CONST .)


state 13

    (19) Expression -> FLOAT_CONST .
    |               reduce using rule 19 (Expression -> FLOAT_CONST .)
    &               reduce using rule 19 (Expression -> FLOAT_CONST .)
    !               reduce using rule 19 (Expression -> FLOAT_CONST .)
    =               reduce using rule 19 (Expression -> FLOAT_CONST .)
    >               reduce using rule 19 (Expression -> FLOAT_CONST .)
    <               reduce using rule 19 (Expression -> FLOAT_CONST .)
    /               reduce using rule 19 (Expression -> FLOAT_CONST .)
    *               reduce using rule 19 (Expression -> FLOAT_CONST .)
    -               reduce using rule 19 (Expression -> FLOAT_CONST .)
    +               reduce using rule 19 (Expression -> FLOAT_CONST .)
    WHILE           reduce using rule 19 (Expression -> FLOAT_CONST .)
    IF              reduce using rule 19 (Expression -> FLOAT_CONST .)
    (               reduce using rule 19 (Expression -> FLOAT_CONST .)
    OBJECTID        reduce using rule 19 (Expression -> FLOAT_CONST .)
    CHAR_CONST      reduce using rule 19 (Expression -> FLOAT_CONST .)
    FLOAT_CONST     reduce using rule 19 (Expression -> FLOAT_CONST .)
    INT_CONST       reduce using rule 19 (Expression -> FLOAT_CONST .)
    RETURN          reduce using rule 19 (Expression -> FLOAT_CONST .)
    PRINT           reduce using rule 19 (Expression -> FLOAT_CONST .)
    VOID            reduce using rule 19 (Expression -> FLOAT_CONST .)
    CHAR            reduce using rule 19 (Expression -> FLOAT_CONST .)
    FLOAT           reduce using rule 19 (Expression -> FLOAT_CONST .)
    INT             reduce using rule 19 (Expression -> FLOAT_CONST .)
    $end            reduce using rule 19 (Expression -> FLOAT_CONST .)
    )               reduce using rule 19 (Expression -> FLOAT_CONST .)
    ;               reduce using rule 19 (Expression -> FLOAT_CONST .)
    ,               reduce using rule 19 (Expression -> FLOAT_CONST .)


state 14

    (20) Expression -> INT_CONST .
    |               reduce using rule 20 (Expression -> INT_CONST .)
    &               reduce using rule 20 (Expression -> INT_CONST .)
    !               reduce using rule 20 (Expression -> INT_CONST .)
    =               reduce using rule 20 (Expression -> INT_CONST .)
    >               reduce using rule 20 (Expression -> INT_CONST .)
    <               reduce using rule 20 (Expression -> INT_CONST .)
    /               reduce using rule 20 (Expression -> INT_CONST .)
    *               reduce using rule 20 (Expression -> INT_CONST .)
    -               reduce using rule 20 (Expression -> INT_CONST .)
    +               reduce using rule 20 (Expression -> INT_CONST .)
    WHILE           reduce using rule 20 (Expression -> INT_CONST .)
    IF              reduce using rule 20 (Expression -> INT_CONST .)
    (               reduce using rule 20 (Expression -> INT_CONST .)
    OBJECTID        reduce using rule 20 (Expression -> INT_CONST .)
    CHAR_CONST      reduce using rule 20 (Expression -> INT_CONST .)
    FLOAT_CONST     reduce using rule 20 (Expression -> INT_CONST .)
    INT_CONST       reduce using rule 20 (Expression -> INT_CONST .)
    RETURN          reduce using rule 20 (Expression -> INT_CONST .)
    PRINT           reduce using rule 20 (Expression -> INT_CONST .)
    VOID            reduce using rule 20 (Expression -> INT_CONST .)
    CHAR            reduce using rule 20 (Expression -> INT_CONST .)
    FLOAT           reduce using rule 20 (Expression -> INT_CONST .)
    INT             reduce using rule 20 (Expression -> INT_CONST .)
    $end            reduce using rule 20 (Expression -> INT_CONST .)
    )               reduce using rule 20 (Expression -> INT_CONST .)
    ;               reduce using rule 20 (Expression -> INT_CONST .)
    ,               reduce using rule 20 (Expression -> INT_CONST .)


state 15

    (25) Expression -> RETURN .
    (26) Expression -> RETURN . Expression
    (5) Expression -> . WHILE ( Expression ) { bloque }
    (6) Expression -> . IF ( Expression ) { bloque } Continuacion
    (7) Expression -> . IF ( Expression ) { bloque }
    (8) Expression -> . Expression | | Expression
    (9) Expression -> . Expression & & Expression
    (10) Expression -> . ! Expression
    (11) Expression -> . Expression ! = Expression
    (12) Expression -> . Expression = = Expression
    (13) Expression -> . Expression > = Expression
    (14) Expression -> . Expression < = Expression
    (15) Expression -> . Expression < Expression
    (16) Expression -> . ( Expression )
    (17) Expression -> . OBJECTID
    (18) Expression -> . CHAR_CONST
    (19) Expression -> . FLOAT_CONST
    (20) Expression -> . INT_CONST
    (21) Expression -> . Expression / Expression
    (22) Expression -> . Expression * Expression
    (23) Expression -> . Expression - Expression
    (24) Expression -> . Expression + Expression
    (25) Expression -> . RETURN
    (26) Expression -> . RETURN Expression
    (27) Expression -> . PRINT ( STRING argumentos ) ;
    (28) Expression -> . PRINT ( STRING ) ;
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for ! resolved as shift
  ! shift/reduce conflict for ( resolved as shift
  ! shift/reduce conflict for OBJECTID resolved as shift
  ! shift/reduce conflict for CHAR_CONST resolved as shift
  ! shift/reduce conflict for FLOAT_CONST resolved as shift
  ! shift/reduce conflict for INT_CONST resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
    |               reduce using rule 25 (Expression -> RETURN .)
    &               reduce using rule 25 (Expression -> RETURN .)
    =               reduce using rule 25 (Expression -> RETURN .)
    >               reduce using rule 25 (Expression -> RETURN .)
    <               reduce using rule 25 (Expression -> RETURN .)
    /               reduce using rule 25 (Expression -> RETURN .)
    *               reduce using rule 25 (Expression -> RETURN .)
    -               reduce using rule 25 (Expression -> RETURN .)
    +               reduce using rule 25 (Expression -> RETURN .)
    VOID            reduce using rule 25 (Expression -> RETURN .)
    CHAR            reduce using rule 25 (Expression -> RETURN .)
    FLOAT           reduce using rule 25 (Expression -> RETURN .)
    INT             reduce using rule 25 (Expression -> RETURN .)
    $end            reduce using rule 25 (Expression -> RETURN .)
    )               reduce using rule 25 (Expression -> RETURN .)
    ;               reduce using rule 25 (Expression -> RETURN .)
    ,               reduce using rule 25 (Expression -> RETURN .)
    WHILE           shift and go to state 7
    IF              shift and go to state 9
    !               shift and go to state 10
    (               shift and go to state 8
    OBJECTID        shift and go to state 11
    CHAR_CONST      shift and go to state 12
    FLOAT_CONST     shift and go to state 13
    INT_CONST       shift and go to state 14
    RETURN          shift and go to state 15
    PRINT           shift and go to state 16

    Expression                     shift and go to state 38

state 16

    (27) Expression -> PRINT . ( STRING argumentos ) ;
    (28) Expression -> PRINT . ( STRING ) ;
    (               shift and go to state 39


state 17

    (36) Metodo -> tipo . OBJECTID ( listaFormales ) { bloque } ;
    (37) Metodo -> tipo . OBJECTID ( ) { bloque } ;
    (35) Atributo -> tipo . OBJECTID optAssign ;
    OBJECTID        shift and go to state 40


state 18

    (31) tipo -> VOID .
    OBJECTID        reduce using rule 31 (tipo -> VOID .)


state 19

    (32) tipo -> CHAR .
    OBJECTID        reduce using rule 32 (tipo -> CHAR .)


state 20

    (33) tipo -> FLOAT .
    OBJECTID        reduce using rule 33 (tipo -> FLOAT .)


state 21

    (34) tipo -> INT .
    OBJECTID        reduce using rule 34 (tipo -> INT .)


state 22

    (1) Programa -> Programa listlineas .
    WHILE           reduce using rule 1 (Programa -> Programa listlineas .)
    IF              reduce using rule 1 (Programa -> Programa listlineas .)
    !               reduce using rule 1 (Programa -> Programa listlineas .)
    (               reduce using rule 1 (Programa -> Programa listlineas .)
    OBJECTID        reduce using rule 1 (Programa -> Programa listlineas .)
    CHAR_CONST      reduce using rule 1 (Programa -> Programa listlineas .)
    FLOAT_CONST     reduce using rule 1 (Programa -> Programa listlineas .)
    INT_CONST       reduce using rule 1 (Programa -> Programa listlineas .)
    RETURN          reduce using rule 1 (Programa -> Programa listlineas .)
    PRINT           reduce using rule 1 (Programa -> Programa listlineas .)
    VOID            reduce using rule 1 (Programa -> Programa listlineas .)
    CHAR            reduce using rule 1 (Programa -> Programa listlineas .)
    FLOAT           reduce using rule 1 (Programa -> Programa listlineas .)
    INT             reduce using rule 1 (Programa -> Programa listlineas .)
    $end            reduce using rule 1 (Programa -> Programa listlineas .)


state 23
